Added first pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div>
+    <h1>Go Watch A Movie!</h1>
+    <hr>
+    
+        <a class="list-group-item list-group-item-action" routerLink="/movies" routerLinkActive="active">
+            <img src="/movie_tickets.jpg" alt="tickets">
+            
+        </a>
+</div>
