--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
-
 #app-container {
   display : grid;
   height:100%;
-  grid-template-rows: 1fr 5fr 1fr;
+  grid-template-rows: 1fr 9fr 1fr;
 }
-
 #content {
-  flex : 8;
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+    gap : 10px;
 }
