--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <div id="app-container">
-  <app-header></app-header>
-  <div id="content">
-    <router-outlet></router-outlet>
-  </div>
-  <app-footer></app-footer>
+    <app-header (handleLogoutEvent)='handleLogout()' [jwt]='jwt'></app-header>
+    
+    <div id="content" class="p-4">
+        <app-side-bar [jwt]='jwt'></app-side-bar>  
+        <div class="col-md-6 offset-md-3">
+            <router-outlet (activate)="subscribeToEmitter($event)"></router-outlet>
+            
+        </div>
+    </div>
+    
+    <app-footer></app-footer>
 </div>
