--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,15 @@
-<div class="p-2 d-flex">
+<div class="p-2 d-flex ">
+    
+    <h1>Stamper Software Movie Library</h1>
+    
     <nav class="ms-auto">
         <div class="list-group ">
            @if (!jwt) {
-                <a class="list-group-item list-group-item-action badge bg-success text-white" routerLink="/login" routerLinkActive="active">login</a>
-                <a class="list-group-item list-group-item-action badge bg-success text-white" routerLink="/login" routerLinkActive="active">{{jwt}}</a>
-            } @else {
-                <button class="list-group-item list-group-item-action badge bg-danger text-white" (click)="handleLogout()">logout</button>
-            }
+               <a class="list-group-item list-group-item-action badge bg-success text-white" routerLink="/login" routerLinkActive="active">login</a>
+           } @else {
+               <button class="list-group-item list-group-item-action badge bg-danger text-white" (click)="handleLogout()">logout</button>
+           }
         </div>
     </nav>
 </div>
+<hr>
