--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 #app-container {
   display : grid;
   height:100%;
-  grid-template-rows: 1fr 9fr 1fr;
+  grid-template-rows: 1fr auto 9fr 1fr;
 }
 #content {
     display: grid;
