--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -5,9 +5,9 @@
         <a class="list-group-item list-group-item-action" routerLink="/genres" routerLinkActive="active">Genre</a>
         
         @if (jwt) {
-            <a class="list-group-item list-group-item-action" routerLink="/admin/create-movie" routerLinkActive="active">Add Movie</a>
-            <a class="list-group-item list-group-item-action" routerLink="/manage-catalog" routerLinkActive="active">Manage Catalog</a>
-            <a class="list-group-item list-group-item-action" routerLink="/search-movies" routerLinkActive="active">Search</a>
+            <a class="list-group-item list-group-item-action" routerLink="/admin/create-movie/0" routerLinkActive="active">Add Movie</a>
+            <a class="list-group-item list-group-item-action" routerLink="/admin/manage-catalog" routerLinkActive="active">Manage Catalog</a>
+            <a class="list-group-item list-group-item-action" routerLink="/admin/search-movies" routerLinkActive="active">Search</a>
         }
     </div>
 </nav>
