--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3 text-center">
-            <h4>Sorry, an unexpected error has occurred.<br>Please Try Again</h4>
+        <div class="col-md-8 offset-md-1 text-center">
+            <h4>Sorry, an error has occurred<br>Please Try Again</h4>
             <p><em>{{error}}</em></p>
         </div>
     </div>
