--- a/src/app/ui/checkbox/checkbox.component.html
+++ b/src/app/ui/checkbox/checkbox.component.html
@@ -1,7 +1,7 @@
 <div class="form-check">
-    <input type="checkbox" id="{{name}}" class="form-check-input" value="{{value}}" name="{{name}}"
-        (change)="onChange()" checked="{{checked}}"
+    <input #checkbox type="checkbox" id="{{title}}" class="form-check-input" value="{{value}}" name="{{title}}"
+        (change)="onChange($event)" [checked]="checked"
     >
 
-    <label for="{{name}}" class="form-check-label">{{title}}</label>
+    <label for="{{title}}" class="form-check-label">{{title}}</label>
 </div>
