--- a/src/app/ui/select/select.component.html
+++ b/src/app/ui/select/select.component.html
@@ -1,6 +1,6 @@
 <div class="mb-3">
-    <label for="{{name}}" class="form-label">{{title}}</label>
-    <select class="form-select" name="{{name}}" id="{{name}}" value="{{value}}" (change)="onChange()">
+    <label for="{{title}}" class="form-label">{{title}}</label>
+    <select #selectElement class="form-select" name="{{title}}" id="{{title}}" value="{{value}}" (change)="onChange(selectElement.value)">
         <option value="">{{placeHolder}}</option>
         
         @for(option of options; track option.id) {
@@ -9,5 +9,5 @@
             </option>
         }
     </select>
-    <div class="{{errorClass}}">{{errorMsg}}</div>
+    <div class="text-danger error-div">{{errorMsg}}</div>
 </div>
