--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div id="app-container">
-    <app-header (handleLogoutEvent)='handleLogout()' [jwt]='jwt'></app-header>
+<div id="app-container" class="col-md-10 offset-md-1">
+    <app-header (handleLogoutEvent)='handleLogout()' [jwt]='jwt()'></app-header>
     
     <div id="content" class="p-4">
         
-        <app-side-bar [jwt]='jwt'></app-side-bar>  
+        <app-side-bar [jwt]='jwt()'></app-side-bar>  
         
         <div>
             <app-alert [message]="alertMessage" [type]="alertType" type="danger"></app-alert>
-            <div class="col-md-6 offset-md-3">
+            <div>
                 <router-outlet (activate)="subscribeToEmitter($event)"></router-outlet>
             </div>
         </div>
