--- a/src/app/genres/genres.component.html
+++ b/src/app/genres/genres.component.html
@@ -1,1 +1,24 @@
-<p>genres works!</p>
+<h1>Movies by Genre</h1>
+<hr>    
+<app-select title="Genres" type="text" (onChangeEvent)="handleGenreChange($event)" [options]="genres"></app-select>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Movie</th>
+            <th>Release Date</th>
+            <th>Rating</th>
+        </tr>
+    </thead>
+    
+    <tbody>
+    
+        @for (movie of movies; track movie.id) {
+            <tr>
+                <td><a href='/movies/{{movie.id}}'>{{movie.title}}</a> </td>
+                <td>{{ movie.release_date }}</td>
+                <td>{{ movie.mpaa_rating }}</td>
+            </tr>
+        }
+    </tbody>
+    
+</table>
