--- a/src/app/manage-catalog/manage-catalog.component.html
+++ b/src/app/manage-catalog/manage-catalog.component.html
@@ -14,7 +14,7 @@
         @for (movie of movies; track movie.id) {
             <tr>
                 <td><a routerLink='/admin/movies/{{movie.id}}' routerLinkActive="active">{{movie.title}}</a> </td>
-                <td>{{ movie.release_date }}</td>
+                <td>{{ parseDate(movie.release_date) }}</td>
                 <td>{{ movie.mpaa_rating }}</td>
             </tr>
         }
